<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F222E"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/user_button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/user_button_description"
        android:scaleType="centerInside"
        android:src="@mipmap/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/user_photo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_corners"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/user_button_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/user_email_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/user_email_label"
        app:layout_constraintTop_toTopOf="@+id/user_email_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_address_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/user_address_label"
        app:layout_constraintTop_toTopOf="@+id/user_address_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_phone_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_address_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/user_phone_label"
        app:layout_constraintTop_toTopOf="@+id/user_phone_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_birth_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_birth_date_label"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/user_birth_date_label"
        app:layout_constraintTop_toTopOf="@+id/user_birth_date_label" />

</androidx.constraintlayout.widget.ConstraintLayout>